--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "firebase": "^5.8.3",
+    "randomstring": "^1.1.5",
     "vue": "^2.5.22",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.0",
