--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "firebase": "^5.8.3",
     "randomstring": "^1.1.5",
     "vue": "^2.5.22",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.3.0",
-    "vuex": "^3.0.1"
+    "vuetify": "^1.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
