--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "arraybuffer-to-string": "^1.0.2",
     "axios": "^0.18.0",
+    "bip39": "^3.0.1",
+    "ed2curve": "^0.2.1",
+    "libsodium": "^0.7.4",
+    "libsodium-wrappers": "^0.7.4",
     "randomstring": "^1.1.5",
+    "string-to-arraybuffer": "^1.0.2",
+    "tweetnacl": "^1.0.1",
+    "tweetnacl-util": "^0.15.0",
     "vue": "^2.5.22",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.0"
