--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,	
   "scripts": {	
     "serve": "vue-cli-service serve",	
+    "serve-mathias": "vue-cli-service serve -p 8080",	
     "build": "vue-cli-service build",	
     "lint": "vue-cli-service lint"	
   },	
